2009-03-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.FileSystemQueue/Banshee.FileSystemQueue/FileSystemQueueSource.cs:
	Don't switch to the FSQ source when some files are loaded if the playing
	item is a video (BGO #570382)

2009-03-09  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Recommendations/RecommendationService.cs:
	Patch from Christoph Burgdorf to update the recommendation pane when
	the track info is updated (BGO #574628).

2009-03-09  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Widgets/MenuButton.cs: Patch from
	Alexander Kojevnikov fixing the Next button so that its pressed state
	is always displayed properly (BGO #554685).

2009-03-09  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Addins.Gui/AddinView.cs: Patch
	from Alexander Kojevnikov fixing a visual glitch in the extension
	manager (BGO #531575).

2009-03-08  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceRowRenderer.cs:
	Move the line added in my previous commit, to prevent a crash when
	switching to the Mini Mode.

2009-03-08  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceRowRenderer.cs:
	Set the source name as the text of the renderer, for a11y.

2009-03-08  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Patch from
	Alexander Kojevnikov fixing a localization issue with the "Delete From
	Drive" action (BGO #560455).

	* src/Dap/Banshee.Dap/Banshee.Dap/MediaGroupSource.cs: Do not set the
	"Delete From Drive" label, it's overwritten in TrackActions anyway.

2009-03-08  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs:
	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Fix