@@ -44,6 +44,13 @@ mdb:
 	mdb -run -args Nereid.exe --debug --uninstalled"; \
 	popd;
 
+csharp:
+	@pushd .; \
+    echo ""; \
+    echo "Starting csharp with Gtk#, Hyena, Banshee, etc referenced"; \
+    csharp -lib:bin/ -pkg:glib-sharp-2.0 -pkg:gtk-sharp-2.0 -pkg:gconf-sharp-2.0 -pkg:dbus-sharp -pkg:taglib-sharp -pkg:ipod-sharp -pkg:mono-addins $(addprefix "-reference:", $(wildcard bin/*.dll)); \
+	popd;
+
 test:
 	@pushd tests; \
 	make test \
